force-app/main/default/objects/Account_Owner__c/Account_Owner__c.object-meta.xml
<CustomObject>
    <label>Account Ownership</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Character</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Ownership</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>