force-app/main/default/objects/Account_Owner__c/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user to be assigned</description>
    <label>Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Owners</relationshipName>
    <type>Lookup</type>
</CustomField>