force-app/main/default/objects/Account_Owner__c/fields/Business_Development_Rep__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Development Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Owners1</relationshipName>
    <type>Lookup</type>
</CustomField>