force-app/main/default/objects/Account_Owner__c/fields/Old_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Old_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Ownerships</relationshipName>
    <type>Lookup</type>
</CustomField>