force-app/main/default/objects/Account_Owner__c/fields/Old_BDR__c.field-meta.xml
<CustomField>
    <fullName>Old_BDR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old BDR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Ownerships1</relationshipName>
    <type>Lookup</type>
</CustomField>