force-app/main/default/objects/Account_Owner__c/fields/Update_Required_AM__c.field-meta.xml
<CustomField>
    <fullName>Update_Required_AM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked this record values needs to be updated on Account</description>
    <inlineHelpText>If checked this record values needs to be updated on Account</inlineHelpText>
    <label>Update Required AM</label>
    <type>Checkbox</type>
</CustomField>