force-app/main/default/objects/Account_Owner__c/fields/Update_Required_BDR__c.field-meta.xml
<CustomField>
    <fullName>Update_Required_BDR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Required BDR</label>
    <type>Checkbox</type>
</CustomField>