force-app/main/default/objects/Account_Owner__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Min_Revenue__c</columns>
    <columns>Max_Revenue__c</columns>
    <columns>NAME</columns>
    <columns>Account_Manager__c</columns>
    <columns>Business_Development_Rep__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>